--- a/src/pages/Fixeddeposits.css
+++ b/src/pages/Fixeddeposits.css
@@ -10,8 +10,8 @@ h2 {
 .card {
     border: none;
     height: 450px;
-    width: 100%; /* Change width to 100% for better centering */
-    margin: 0 auto; /* Center the card horizontally */
+    width: 100%;
+    margin: 0 auto;
 }
 
 .card-img-top {
@@ -36,10 +36,9 @@ h2 {
     margin: 0;
 }
 
-/* Center the cards inside the row */
 .card-container {
     display: flex;
-    justify-content: center; /* Center the content */
-    flex-wrap: wrap; /* Allow the cards to wrap to the next line */
-    gap: 20px; /* Optional: Add spacing between cards */
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
 }
